--- a/reprohack_hub/static/sass/_btn.scss
+++ b/reprohack_hub/static/sass/_btn.scss
@@ -178,6 +178,7 @@
 .boxed_btn_orange {
   cursor: pointer;
   font-size: 16px;
+  font-family: $font1;
   color: #fff;
   padding: 12px 30px;
   background: #FDAE5C;
